--- a/widget-all/dashboard.html
+++ b/widget-all/dashboard.html
@@ -11,8 +11,9 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <!-- Chart.js -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <!-- Ethers.js -->
-    <script src="https://cdn.ethers.io/lib/ethers-5.7.2.umd.min.js"></script>
+    
+    <!-- CSS Unificado -->
+    <link href="css/app.css" rel="stylesheet">
     
     <style>
         :root {
@@ -1313,5 +1314,10 @@
             dashboard = new Dashboard();
         });
     </script>
+
+    <!-- JavaScript Unificado -->
+    <script src="js/shared/web3.js"></script>
+    <script src="js/shared/api.js"></script>
+    <script src="js/shared/auth.js"></script>
 </body>
 </html>
