--- a/widget-all/auth.html
+++ b/widget-all/auth.html
@@ -6,6 +6,10 @@
     <title>🔐 Autenticação - XCafe Widget SaaS</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+    
+    <!-- CSS Unificado -->
+    <link href="css/app.css" rel="stylesheet">
+    
     <style>
         body {
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
@@ -400,5 +404,10 @@
             });
         }
     </script>
+
+    <!-- JavaScript Unificado -->
+    <script src="js/shared/web3.js"></script>
+    <script src="js/shared/api.js"></script>
+    <script src="js/shared/auth.js"></script>
 </body>
 </html>
