--- a/widget-all/admin-panel.html
+++ b/widget-all/admin-panel.html
@@ -326,6 +326,7 @@
     <script src="js/shared/web3.js"></script>
     <script src="js/shared/api.js"></script>
     <script src="js/shared/auth.js"></script>
+    <script src="js/xcafe-app.js"></script>
 
     <script>
         // ============================================================================
