--- a/widget-all/auth.html
+++ b/widget-all/auth.html
@@ -409,5 +409,6 @@
     <script src="js/shared/web3.js"></script>
     <script src="js/shared/api.js"></script>
     <script src="js/shared/auth.js"></script>
+    <script src="js/xcafe-app.js"></script>
 </body>
 </html>
