--- a/widget-all/dashboard.html
+++ b/widget-all/dashboard.html
@@ -783,8 +783,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     
     <!-- Módulos do Sistema -->
-    <script src="../modules/data-manager.js"></script>
-    <script src="../modules/auth-manager.js"></script>
+    <script src="js/modules/data-manager.js"></script>
+    <script src="js/modules/auth-manager.js"></script>
     
     <script>
         // ==================== DASHBOARD CONTROLLER ====================
@@ -1319,5 +1319,6 @@
     <script src="js/shared/web3.js"></script>
     <script src="js/shared/api.js"></script>
     <script src="js/shared/auth.js"></script>
+    <script src="js/xcafe-app.js"></script>
 </body>
 </html>
