--- a/widget-all/index.html
+++ b/widget-all/index.html
@@ -361,6 +361,7 @@
     <script src="js/shared/web3.js"></script>
     <script src="js/shared/api.js"></script>
     <script src="js/shared/auth.js"></script>
+    <script src="js/xcafe-app.js"></script>
 
     <script>
         // ============================================================================
