feat: Implementar sistema de carregamento de templates e funcionalidades da página inicial
- Adicionado o arquivo index-unified.js com funcionalidades principais da landing page, incluindo suporte a Web3.
- Criado o arquivo template-loader.js para carregar header e footer de forma modular em todas as páginas.
- Implementadas animações, contadores e interatividade no widget demo.
- Adicionadas funcionalidades de conexão com MetaMask e gerenciamento de estado da conexão.

--- a/widget-all/header.html
+++ b/widget-all/header.html
@@ -1,37 +1,41 @@
-<!-- Navegação -->
-<nav class="navbar navbar-expand-lg navbar-cosmic fixed-top" id="navbar">
+<nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm sticky-top">
     <div class="container">
-        <a class="navbar-brand-cosmic" href="#home">
+        <a class="navbar-brand" href="#home">
             <i class="fas fa-cube me-2"></i>
             Widget SaaS
         </a>
-        
-        <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-            <i class="fas fa-bars text-white"></i>
+
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+            <span class="navbar-toggler-icon"></span>
         </button>
-        
+
         <div class="collapse navbar-collapse" id="navbarNav">
-            <div class="ms-auto">
-                <ul class="navbar-nav align-items-center">
-                    <li class="nav-item mx-3">
-                        <a class="nav-link-cosmic" href="#features">Recursos</a>
-                    </li>
-                    <li class="nav-item mx-3">
-                        <a class="nav-link-cosmic" href="#how-it-works">Como Funciona</a>
-                    </li>
-                    <li class="nav-item mx-3">
-                        <a class="nav-link-cosmic" href="#demo">Demo</a>
-                    </li>
-                    <li class="nav-item mx-3">
-                        <a class="nav-link-cosmic" href="#precos">Preços</a>
-                    </li>
-                    <li class="nav-item mx-3">
-                        <a href="login.html" class="nav-link-cosmic">Login</a>
-                    </li>
-                    <li class="nav-item ms-2">
-                        <a href="register.html" class="btn btn-cosmic btn-sm">Começar Grátis</a>
-                    </li>
-                </ul>
+            <ul class="navbar-nav me-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="#features">Recursos</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#how-it-works">Como Funciona</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#pricing">Preços</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#demo">Demo</a>
+                </li>
+            </ul>
+
+            <div class="d-flex align-items-center">
+                <div id="connection-status" class="connection-indicator disconnected me-3">
+                    <i class="fas fa-times-circle me-1"></i>
+                    Desconectado
+                </div>
+                <button id="connect-metamask" class="btn btn-outline-primary btn-custom me-2">
+                    <i class="fab fa-ethereum me-1"></i>Conectar
+                </button>
+                <a href="dashboard.html" class="btn btn-primary btn-custom">
+                    <i class="fas fa-tachometer-alt me-1"></i>Dashboard
+                </a>
             </div>
         </div>
     </div>
