--- a/widget-all/dashboard.html
+++ b/widget-all/dashboard.html
@@ -13,7 +13,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     
     <!-- CSS Unificado -->
-    <link href="css/app.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
     
     <style>
         :root {
@@ -1319,6 +1319,12 @@
     <script src="js/shared/web3.js"></script>
     <script src="js/shared/api.js"></script>
     <script src="js/shared/auth.js"></script>
+    <script src="js/shared/back-to-top.js"></script>
     <script src="js/xcafe-app.js"></script>
+
+    <!-- Botão Voltar ao Topo -->
+    <button id="back-to-top" class="back-to-top" title="Voltar ao topo">
+        <i class="fas fa-chevron-up"></i>
+    </button>
 </body>
 </html>
