--- a/widget-all/header.html
+++ b/widget-all/header.html
@@ -1,16 +1,23 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm sticky-top">
     <div class="container">
-        <a class="navbar-brand" href="#home">
-            <i class="fas fa-cube me-2"></i>
-            Widget SaaS
+        <!-- Brand -->
+        <a class="navbar-brand" href="index.html">
+            <i class="fas fa-cube me-2 text-primary"></i>
+            <span class="fw-bold text-primary">Widget SaaS</span>
         </a>
 
+        <!-- Mobile Toggle -->
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
             <span class="navbar-toggler-icon"></span>
         </button>
 
+        <!-- Navigation -->
         <div class="collapse navbar-collapse" id="navbarNav">
+            <!-- Menu Items -->
             <ul class="navbar-nav me-auto">
+                <li class="nav-item">
+                    <a class="nav-link active" href="#hero">Início</a>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#features">Recursos</a>
                 </li>
@@ -18,25 +25,33 @@
                     <a class="nav-link" href="#how-it-works">Como Funciona</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#pricing">Preços</a>
+                    <a class="nav-link" href="#demo">Demo</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#demo">Demo</a>
+                    <a class="nav-link" href="#pricing">Preços</a>
                 </li>
             </ul>
 
-            <div class="d-flex align-items-center">
-                <div id="connection-status" class="connection-indicator disconnected me-3">
-                    <i class="fas fa-times-circle me-1"></i>
-                    Desconectado
-                </div>
-                <button id="connect-metamask" class="btn btn-outline-primary btn-custom me-2">
-                    <i class="fab fa-ethereum me-1"></i>Conectar
+            <!-- Wallet Connection Area -->
+            <div class="d-flex align-items-center gap-2">
+                <!-- Botão de Conexão - Sem texto, apenas ícone -->
+                <button id="connect-wallet-btn" class="btn btn-sm btn-outline-secondary btn-custom" title="Conectar Carteira">
+                    <i class="fas fa-wallet"></i>
                 </button>
-                <a href="dashboard.html" class="btn btn-primary btn-custom">
-                    <i class="fas fa-tachometer-alt me-1"></i>Dashboard
-                </a>
+                
+                <!-- Botão Dashboard - Sem texto, apenas ícone -->
+                <button id="dashboard-btn" class="btn btn-sm btn-outline-secondary btn-custom" disabled title="Dashboard">
+                    <i class="fas fa-chart-bar"></i>
+                </button>
+                
+                <!-- Botão Idiomas - Placeholder para futuro sistema de tradução -->
+                <button id="language-btn" class="btn btn-sm btn-outline-secondary btn-custom" disabled title="Idiomas (Em breve)">
+                    <span class="flag-icon">🌐</span>
+                </button>
             </div>
+
+            <!-- Google Translate Element (Invisível) -->
+            <div id="google_translate_element" style="display: none;"></div>
         </div>
     </div>
 </nav>
