--- a/widget-all/index.html
+++ b/widget-all/index.html
@@ -310,10 +310,8 @@
                                     </div>
 
                                     <!-- Container do Widget com fundo fixo -->
-                                    <div>
-                                        <div id="widget-demo-container" data-token-widget data-api-key="demo-key"
-                                            data-sale-id="demo-sale" data-theme="light">
-                                        </div>
+                                    <div id="widget-demo-container" data-token-widget data-api-key="demo-key"
+                                        data-sale-id="demo-sale" data-theme="light">
                                     </div>
                                 </div>
                                 <div class="col-md-6">
@@ -341,40 +339,44 @@
 <span class="text-info">&lt;/body&gt;
 &lt;/html&gt;</span></code></pre>
                                     </div>
-                                    <div class="alert alert-info mt-3">
-                                        <i class="fas fa-shield-alt me-2"></i>
-                                        <strong>Sistema de Segurança:</strong> Todas as informações críticas (nome do
-                                        token, símbolo, preço, quantidades) são armazenadas no servidor e validadas via
-                                        blockchain. Isso previne fraudes e garante a integridade dos dados.
+                                    <div class="mt-4">
+                                        <h6><i class="fas fa-star me-2 text-warning"></i>Recursos Inclusos:</h6>
+                                        <hr class="my-3">
+                                        <div class="row">
+                                            <div class="col-md-6">
+                                                <ul class="list-unstyled">
+                                                    <li class="mb-2"><i
+                                                            class="fas fa-magic text-success me-2"></i>Integração
+                                                        ultra-simples</li>
+                                                    <li class="mb-2"><i
+                                                            class="fab fa-ethereum text-primary me-2"></i>Conexão
+                                                        MetaMask automática</li>
+                                                    <li class="mb-2"><i class="fas fa-palette text-info me-2"></i>Temas
+                                                        claro/escuro</li>
+                                                </ul>
+                                            </div>
+                                            <div class="col-md-6">
+                                                <ul class="list-unstyled">
+                                                    <li class="mb-2"><i
+                                                            class="fas fa-shield-alt text-warning me-2"></i>Sistema
+                                                        de segurança avançado</li>
+                                                    <li class="mb-2"><i
+                                                            class="fas fa-mobile-alt text-purple me-2"></i>Interface
+                                                        responsiva</li>
+                                                    <li class="mb-2"><i
+                                                            class="fas fa-network-wired text-danger me-2"></i>Suporte a
+                                                        múltiplas redes</li>
+                                                </ul>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
-                            <div class="mt-4">
-                                <h6><i class="fas fa-star me-2 text-warning"></i>Recursos Inclusos:</h6>
-                                <hr class="my-3">
-                                <div class="row">
-                                    <div class="col-md-6">
-                                        <ul class="list-unstyled">
-                                            <li class="mb-2"><i class="fas fa-magic text-success me-2"></i>Integração
-                                                ultra-simples</li>
-                                            <li class="mb-2"><i class="fab fa-ethereum text-primary me-2"></i>Conexão
-                                                MetaMask automática</li>
-                                            <li class="mb-2"><i class="fas fa-palette text-info me-2"></i>Temas
-                                                claro/escuro</li>
-                                        </ul>
-                                    </div>
-                                    <div class="col-md-6">
-                                        <ul class="list-unstyled">
-                                            <li class="mb-2"><i class="fas fa-shield-alt text-warning me-2"></i>Sistema
-                                                de segurança avançado</li>
-                                            <li class="mb-2"><i class="fas fa-mobile-alt text-purple me-2"></i>Interface
-                                                responsiva</li>
-                                            <li class="mb-2"><i
-                                                    class="fas fa-network-wired text-danger me-2"></i>Suporte a
-                                                múltiplas redes</li>
-                                        </ul>
-                                    </div>
-                                </div>
+                            <div class="alert alert-info mt-3">
+                                <i class="fas fa-shield-alt me-2"></i>
+                                <strong>Sistema de Segurança:</strong> Todas as informações críticas (nome do token,
+                                símbolo, preço, quantidades) são armazenadas no servidor e validadas via blockchain.
+                                Isso previne fraudes e garante a integridade dos dados.
                             </div>
                         </div>
                     </div>
@@ -403,7 +405,7 @@
                         </div>
                         <div class="card-body">
                             <ul class="list-unstyled">
-                                <li class="mb-2">✅ 100 transações</li>
+                                <li class="mb-2">✅ 1000 transações</li>
                                 <li class="mb-2">✅ 1 widget ativo</li>
                                 <li class="mb-2">✅ Suporte básico</li>
                                 <li class="mb-2">✅ Analytics básicas</li>
@@ -424,7 +426,7 @@
                         </div>
                         <div class="card-body">
                             <ul class="list-unstyled">
-                                <li class="mb-2">✅ 500 transações</li>
+                                <li class="mb-2">✅ 5000 transações</li>
                                 <li class="mb-2">✅ 5 widgets ativos</li>
                                 <li class="mb-2">✅ Suporte prioritário</li>
                                 <li class="mb-2">✅ Analytics avançadas</li>
@@ -446,7 +448,7 @@
                         </div>
                         <div class="card-body">
                             <ul class="list-unstyled">
-                                <li class="mb-2">✅ 1000 transações</li>
+                                <li class="mb-2">✅ 10000 transações</li>
                                 <li class="mb-2">✅ 10 widgets ativos</li>
                                 <li class="mb-2">✅ Suporte VIP 24/7</li>
                                 <li class="mb-2">✅ API dedicada</li>
@@ -469,7 +471,7 @@
                         </div>
                         <div class="card-body">
                             <ul class="list-unstyled">
-                                <li class="mb-2">✅ 5000 transações</li>
+                                <li class="mb-2">✅ 50000 transações</li>
                                 <li class="mb-2">✅ Widgets ilimitados</li>
                                 <li class="mb-2">✅ Gerente dedicado</li>
                                 <li class="mb-2">✅ SLA garantido</li>
