feat: Add production startup script for XCAFE Widget SaaS
- Implemented `start-production.py` to initialize the production environment with checks for dependencies, environment variables, and server file validity.
- Created necessary directories for data, logs, and user management.
- Added dependency installation via `requirements.txt`.
- Included server startup functionality with user-friendly output.

test: Add comprehensive API endpoint testing script

- Introduced `test-api-endpoints.py` to validate API endpoints of the XCAFE Widget server.
- Implemented checks for response status, JSON validity, and connection errors.
- Summarized test results with a detailed report.

test: Implement final validation script for complete system testing

- Developed `test-final-validation.py` to execute all critical system tests.
- Included checks for CSS, JavaScript files, configuration files, and API endpoints.
- Generated a detailed report summarizing test results and success rates.

test: Create phase 3 testing script for UI and UX improvements

- Added `test-phase3.py` to specifically test interface and user experience enhancements.
- Verified the existence of CSS and JavaScript files, HTML updates, and responsive design features.
- Generated a report summarizing the success of phase 3 tests.

test: Implement simplified system testing script

- Created `test-simple.py` for a streamlined testing approach of critical system components.
- Included server status checks, API endpoint validation, and static file verification.
- Summarized results with a success rate and error reporting.

test: Add automated system testing script with detailed output

- Developed `test-system.py` to automate testing of all critical components with color-coded output.
- Included tests for server status, API endpoints, static files, Web3 integration, CORS headers, and security headers.
- Provided a comprehensive summary of test results with success rates and error details.

--- a/widget-all/index.html
+++ b/widget-all/index.html
@@ -22,8 +22,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
 
-    <!-- CSS personalizado -->
+    <!-- CSS personalizado - Sistema Completo -->
     <link href="css/main.css" rel="stylesheet">
+    <link href="css/theme-system.css" rel="stylesheet">
+    <link href="css/loading-states.css" rel="stylesheet">
+    <link href="css/responsive.css" rel="stylesheet">
 
     <!-- CSS para garantir fundo fixo do demo -->
     <style>
@@ -586,6 +589,9 @@
             }, 100);
         });
     </script>
+
+    <!-- Sistema de Temas e UX -->
+    <script src="js/theme-controller.js"></script>
 
     <!-- Botão Voltar ao Topo -->
     <button id="back-to-top" class="back-to-top" title="Voltar ao topo">
