--- a/widget-all/header.html
+++ b/widget-all/header.html
@@ -34,6 +34,11 @@
 
             <!-- Wallet Connection Area -->
             <div class="d-flex align-items-center gap-2">
+                <!-- Botão de Tema - Simples alternador claro/escuro -->
+                <button id="theme-toggle-btn" class="btn btn-sm btn-outline-secondary btn-custom" title="Alternar Tema">
+                    <i class="fas fa-moon" id="theme-icon"></i>
+                </button>
+                
                 <!-- Botão de Conexão - Sem texto, apenas ícone -->
                 <button id="connect-wallet-btn" class="btn btn-sm btn-outline-secondary btn-custom" title="Conectar Carteira">
                     <i class="fas fa-wallet"></i>
