widget index final

--- a/widget-all/footer.html
+++ b/widget-all/footer.html
@@ -5,7 +5,7 @@
                 <i class="fas fa-cube me-2"></i>
                 Widget SaaS
             </h5>
-            <p class="text-light">
+            <p class="text-muted">
                 A plataforma mais avançada para monetização de sites
                 através de widgets de tokens.
             </p>
@@ -13,32 +13,32 @@
         <div class="col-lg-2">
             <h6 class="mb-3">Produto</h6>
             <ul class="list-unstyled">
-                <li class="mb-2"><a href="#features" class="text-light text-decoration-none">Recursos</a></li>
-                <li class="mb-2"><a href="#demo" class="text-light text-decoration-none">Demo</a></li>
-                <li class="mb-2"><a href="#pricing" class="text-light text-decoration-none">Preços</a></li>
+                <li class="mb-2"><a href="#features" class="text-decoration-none">Recursos</a></li>
+                <li class="mb-2"><a href="#demo" class="text-decoration-none">Demo</a></li>
+                <li class="mb-2"><a href="#pricing" class="text-decoration-none">Preços</a></li>
             </ul>
         </div>
         <div class="col-lg-2">
             <h6 class="mb-3">Empresa</h6>
             <ul class="list-unstyled">
-                <li class="mb-2"><a href="#" class="text-light text-decoration-none">Sobre</a></li>
-                <li class="mb-2"><a href="#" class="text-light text-decoration-none">Blog</a></li>
-                <li class="mb-2"><a href="#" class="text-light text-decoration-none">Contato</a></li>
+                <li class="mb-2"><a href="#" class="text-decoration-none">Sobre</a></li>
+                <li class="mb-2"><a href="#" class="text-decoration-none">Blog</a></li>
+                <li class="mb-2"><a href="#" class="text-decoration-none">Contato</a></li>
             </ul>
         </div>
         <div class="col-lg-2">
             <h6 class="mb-3">Suporte</h6>
             <ul class="list-unstyled">
-                <li class="mb-2"><a href="#" class="text-light text-decoration-none">Ajuda</a></li>
-                <li class="mb-2"><a href="#" class="text-light text-decoration-none">Documentação</a></li>
-                <li class="mb-2"><a href="#" class="text-light text-decoration-none">Status</a></li>
+                <li class="mb-2"><a href="#" class="text-decoration-none">Ajuda</a></li>
+                <li class="mb-2"><a href="#" class="text-decoration-none">Documentação</a></li>
+                <li class="mb-2"><a href="#" class="text-decoration-none">Status</a></li>
             </ul>
         </div>
         <div class="col-lg-2">
             <h6 class="mb-3">Legal</h6>
             <ul class="list-unstyled">
-                <li class="mb-2"><a href="#" class="text-light text-decoration-none">Privacidade</a></li>
-                <li class="mb-2"><a href="#" class="text-light text-decoration-none">Termos</a></li>
+                <li class="mb-2"><a href="#" class="text-decoration-none">Privacidade</a></li>
+                <li class="mb-2"><a href="#" class="text-decoration-none">Termos</a></li>
             </ul>
         </div>
     </div>
