--- a/widget-all/index.html
+++ b/widget-all/index.html
@@ -22,14 +22,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
 
-    <!-- CSS personalizado - Sistema Completo -->
+    <!-- CSS Principal do Sistema -->
     <link href="css/main.css" rel="stylesheet">
-    <link href="css/theme-system.css" rel="stylesheet">
-    <link href="css/loading-states.css" rel="stylesheet">
-    <link href="css/responsive.css" rel="stylesheet">
     
-    <!-- CSS específico da página -->
-    <link href="css/index.css" rel="stylesheet">
+    <!-- CSS específico do Widget (apenas se necessário) -->
     <link href="css/widget-sale.css" rel="stylesheet">
 </head>
 
@@ -55,7 +51,7 @@
                             <i class="fas fa-rocket me-2"></i>
                             Começar Agora
                         </button>
-                        <a href="#demo" class="btn btn-outline-light btn-lg btn-custom">
+                        <a href="#demo" class="btn btn-success btn-lg btn-custom">
                             <i class="fas fa-play me-2"></i>
                             Ver Demo
                         </a>
@@ -71,7 +67,7 @@
     </section>
 
     <!-- Stats Section -->
-    <section class="stats-section">
+    <section class="stats-section section-primary">
         <div class="container">
             <div class="row text-center">
                 <div class="col-md-3 mb-4">
@@ -94,8 +90,10 @@
         </div>
     </section>
 
+    <hr class="section-separator">
+
     <!-- Features Section -->
-    <section id="features" class="py-5">
+    <section id="features" class="py-5 section-secondary">
         <div class="container">
             <div class="text-center mb-5">
                 <h2 class="display-5 fw-bold">🎯 Por que escolher nosso Widget?</h2>
@@ -198,8 +196,10 @@
         </div>
     </section>
 
+    <hr class="section-separator">
+
     <!-- How It Works Section -->
-    <section id="how-it-works" class="how-it-works">
+    <section id="how-it-works" class="how-it-works section-tertiary">
         <div class="container">
             <div class="text-center mb-5">
                 <h2 class="display-5 fw-bold">🔄 Como Funciona</h2>
@@ -264,8 +264,10 @@
         </div>
     </section>
 
+    <hr class="section-separator">
+
     <!-- Demo Section -->
-    <section id="demo" class="demo-section">
+    <section id="demo" class="demo-section section-quaternary">
         <div class="container">
             <div class="text-center mb-5">
                 <h2 class="display-5 fw-bold">🎮 Experimente o Widget</h2>
@@ -379,8 +381,10 @@
         </div>
     </section>
 
+    <hr class="section-separator">
+
     <!-- Pricing Section -->
-    <section id="pricing" class="pricing-section">
+    <section id="pricing" class="pricing-section section-primary">
         <div class="container">
             <div class="text-center mb-5">
                 <h2 class="pricing-title">PLANOS E PREÇOS</h2>
